Bug 72961 - [FILEOPEN]LibO-4 is crashed when you open ODFver.1.0\1.1 created by LibO-3.5\6
Summary: [FILEOPEN]LibO-4 is crashed when you open ODFver.1.0\1.1 created by LibO-3.5\6
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.2.0.1 rc
Hardware: Other All
: high blocker
Assignee: Julien Nabet
URL:
Whiteboard: target:4.3.0 target:4.2.0.2 target:4.1.5
Keywords: haveBacktrace, regression
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2013-12-22 10:21 UTC by ape
Modified: 2013-12-29 19:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
file as example (665.80 KB, application/vnd.oasis.opendocument.text)
2013-12-22 10:21 UTC, ape
Details
bt with symbols (23.16 KB, text/plain)
2013-12-22 18:10 UTC, Julien Nabet
Details
Example: the freezes display output (378.43 KB, image/png)
2013-12-26 10:18 UTC, ape
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ape 2013-12-22 10:21:16 UTC
Created attachment 91118 [details]
file as example

LibreOffice-4 (all versions) is crashed when you open ODF files version 1.0 created by LibreOffice-3.5{6}.7.
 Try to open a file contained in an attachment.
 The 't367v1.odt' file can open from following programs: OO.org-1.1.5; OO.org-2.4.2; OO.org-3.1.1; AOO-4.0.0.
--
NOTE: I inserted SVG into this file and got this result.
Comment 1 Julien Nabet 2013-12-22 18:10:41 UTC
Created attachment 91131 [details]
bt with symbols

On pc Debian x86-64 with master sources updated some days ago, I reproduced the crash.
Comment 2 Julien Nabet 2013-12-22 18:12:12 UTC
With 4.1.3 Debian package, I can open the file
Comment 3 ape 2013-12-22 18:21:12 UTC
I reproduced the crash on pc Windows XP sp2-64bit\sp3-32bit; LibO-4.0.6.2;4.1.5.0+;4.2.0.1
Comment 4 ape 2013-12-22 20:18:49 UTC
OS Lubuntu-13.10_amd64:
1. LibO-4.2.0.1 (ID: 7bf567613a536ded11709b952950c9e8f7181a4a) is crashed.
2. LibO-4.1.3.2 (ubuntu ID: 410m0 Build2) opened this file.
Comment 5 ape 2013-12-22 21:03:36 UTC
An interesting feature:
Insert SWM, extracted from the attachment 91118 [details], makes crash only those Libre Offices, which were unable to open the 't367v1.odt' file.
Comment 6 ape 2013-12-26 10:18:50 UTC
Created attachment 91196 [details]
Example: the freezes display output

Windows XP 64-bit; LibreOffice 4.2.0.1(rc1):
It is possible that freezes display output. I tried to insert the SVM extracting file (attachment 91118 [details]) created by the LibreOffice-3.6.7 and received:
 1. Freezing of the soffice.bin process;
 2. Freezing of the display output (see picture in the attachment).
Comment 7 Julien Nabet 2013-12-29 17:28:10 UTC
I could open the file with 4.1.4.2 version on Windows 7 (64 bits).
So it seems there's a pb between 4.1.4 and 4.1.5 (+ another problem concerning 4.0.6?)
Comment 8 Commit Notification 2013-12-29 18:12:09 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ebe616de53b98e419c39782c6615877a12f0edc7

Resolves: fdo#72961 Crash when you open ODFver.1.0/1.1 created by LibO-3.5/3.6



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Julien Nabet 2013-12-29 18:13:58 UTC
bibisect isn't needed, the problem was indeed obvious.
Comment 10 Commit Notification 2013-12-29 18:46:18 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6cc888babdc3e6414e55f57c0df65135f2ef4804&h=libreoffice-4-2

Resolves: fdo#72961 Crash when you open ODFver.1.0/1.1 created by LibO-3.5/3.6


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2013-12-29 19:03:05 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7be4941f5f8e4936e058c5530df6fad6448cac8e&h=libreoffice-4-1

Resolves: fdo#72961 Crash when you open ODFver.1.0/1.1 created by LibO-3.5/3.6


It will be available in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.