Resolves: fdo#72961 Crash when you open ODFver.1.0/1.1 created by LibO-3.5/3.6

It seems pAction may be NULL so let's keep on to check it.

Change-Id: Ie1a48c96bfa930364053c7c3ad0c940559544e33
(cherry picked from commit ebe616de53b98e419c39782c6615877a12f0edc7)